update for debug

--- a/experiments/coco/hrnet/w48_384x288_adam_lr1e-3.yaml
+++ b/experiments/coco/hrnet/w48_384x288_adam_lr1e-3.yaml
@@ -4,10 +4,11 @@ CUDNN:
   DETERMINISTIC: false
   ENABLED: true
 DATA_DIR: ''
-GPUS: (0,1,2,3)
+#GPUS: (0,1,2,3)
+GPUS: (0,1)
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
-WORKERS: 24
+WORKERS: 8
 PRINT_FREQ: 100
 
 DATASET:
@@ -112,10 +113,10 @@ TEST:
   BBOX_THRE: 1.0
   IMAGE_THRE: 0.0
   IN_VIS_THRE: 0.2
-  MODEL_FILE: ''
+  MODEL_FILE: 'models/pytorch/pose_coco/pose_hrnet_w48_384x288.pth'
   NMS_THRE: 1.0
   OKS_THRE: 0.9
-  USE_GT_BBOX: true
+  USE_GT_BBOX: false
   FLIP_TEST: true
   POST_PROCESS: true
   SHIFT_HEATMAP: true
